-fixed dark mode highscore

--- a/dark-styles.css
+++ b/dark-styles.css
@@ -6,24 +6,21 @@ html {
   overflow: hidden;
   touch-action: manipulation;
 }
-input {
-  height: 6vh;
-  float: right;
-  margin-right: 3vh;
-  margin-top: 2vh;
-  touch-action: manipulation;
-}
-input:active {
-  -webkit-transform: scale(.96);
-  -ms-transform: scale(.96);
-  transform: scale(.96);
-}
+
+.saveGame {
+  float: left;
+  width: 15vh;
+
+ }
+
+
 .lightbulb {
-  touch-action: manipulation;
+
   height: 6vh;
   float: right;
   margin-right: 3vh;
   margin-top: 2vh;
+  touch-action: manipulation;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
@@ -35,7 +32,6 @@ body {
 }
 .display {
   touch-action: manipulation;
-
   color: #ffffff;
   font-size: 5vh;
   padding-bottom: 3vh;
@@ -48,26 +44,28 @@ body {
   padding-top: 3vh;
 }
 
-button {
+.button_container {
   overflow: auto;
   border-radius: 5px;
   border: none;
   touch-action: manipulation;
   font-size: 2.5vh;
-  background-color: #34495e;
+  background-color: #32506f; /* Green background */
   color: white; /* White text */
   cursor: pointer; /* Pointer/hand icon */
   width: 45vh; /* Set a width if needed */
   height: 11vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-button:disabled {
   touch-action: manipulation;
 }
+
 button[disabled] {
   background-color: #cccccc;
   color: #666666;
+  touch-action: manipulation;
+}
+button:disabled {
   touch-action: manipulation;
 }
 @media screen and (min-width: 700px) {
@@ -90,7 +88,7 @@ input:active {
   -webkit-transform: scale(.96);
   -ms-transform: scale(.96);
   transform: scale(.96);
-}
+}}
   particle {
     -webkit-filter: grayscale(100%);
     filter: grayscale(100%);
@@ -106,5 +104,74 @@ input:active {
     opacity: 0;
     touch-action: manipulation;
   }
+
+
+
+
+/* The Modal (background) */
+.save {
+  float: left;
+  border-radius: 5px;
+  border: none;
+  touch-action: manipulation;
+  font-size: 2.5vh;
+  background-color: #32506f; /* Green background */
+  color: white; /* White text */
+  cursor: pointer; /* Pointer/hand icon */
+  width: 12vh; /* Set a width if needed */
+  height: 11vh;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  touch-action: manipulation;
+}
+.modal {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+  Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #fefefe;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 2vh;
+  border: 4px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  border-radius: 8px;
+
+}
+
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.highscores {
+  font-size: 2.5vh;
+  padding: .5vh;
+}
+hr.dashed {
+  border-top: 1vh dashed #bbb;
 }
 
