--- a/styles.css
+++ b/styles.css
@@ -112,9 +112,24 @@ particle {
   opacity: 0;
   touch-action: manipulation;
 }
+label {
+  font-weight: bold;
+}
 
+.usernameBox {
+  text-align: center;
+  width: 100%;
+  padding: 8px 16px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  font-size: 3vh;
 
-
+}
+.saveButton{
+  border-radius: 5px;
+  border: none;
+  font-size: 3vh;
+}
 /* The Modal (background) */
 .save {
   float: left;
@@ -151,8 +166,8 @@ particle {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
   Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: #fefefe;
-  margin: 50% auto; /* 15% from the top and centered */
-  padding: 3%;
+  margin: 5% auto; /* 15% from the top and centered */
+  padding: 2vh;
   border: 4px solid #888;
   width: 80%; /* Could be more or less, depending on screen size */
   border-radius: 8px;
@@ -176,10 +191,13 @@ particle {
 }
 
 .highscores {
-  overflow: hidden
+  font-size: 2.5vh;
+  padding-top: 2vh;
 
 }
-
+hr.dashed {
+  border-top: 1vh dashed #bbb;
+}
 
 
 
